--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "ts-node": "^10.9.2",
     "tsup": "^8.5.0",
     "tsx": "^4.19.4",
